--- a/.gitignore
+++ b/.gitignore
@@ -16,14 +16,4 @@
 # Ignore .DS_store file
 .DS_Store
 
-.idea/flr.iml
-
-.idea/misc.xml
-
-.idea/vcs.xml
-
-.idea/workspace.xml
-
-.idea/misc.xml
-
-.idea/misc.xml
+/.idea
